data/derived/comb/progs/unify/prog1510.ml.out
Characters 67-68:
  (q+1,mulByDigit x q) in 
                    ^
Error: This expression has type int but an expression was expected of type
         int list
